--- a/source-and-style/index.html
+++ b/source-and-style/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-    <h1> Welcome to my Closet Database! </h1>
+    <h1> Welcome to [website idea?] </h1>
 
-        <p> This website is meant to outline the life and death of the 
-            clothes in my closet.
+        <p> [insert text here lol]
         </p>
 
 </html>
